k8s/web/web.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dasher-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - backend:
            service:
              name: dasher-web-service
              port:
                name: web
          path: /
          pathType: Prefix
